--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&family=Staatliches&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+/* container */
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.wrapper {
+  width: 1280px;
+  height: 720px;
+  border-radius: 20px;
+  background: #b1b1b1;
 }
