--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Josefin Sans', Arial, Helvetica, sans-serif;
+  background: rgb(2,0,36);
+  background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(22,22,111,1) 0%, rgba(99,229,255,1) 100%); 
+}
+
 /* container */
 .container {
   display: flex;
@@ -13,11 +19,36 @@
   align-items: center;
   width: 100%;
   height: 100vh;
+  position: relative;
 }
 
 .wrapper {
   width: 1280px;
   height: 720px;
   border-radius: 20px;
-  background: #b1b1b1;
+  background: #ffffff47;
+  box-shadow: 0 0 20px #28282867;
+  backdrop-filter: blur(5px);
+  position: absolute;
+}
+
+/* message */
+.message {
+  display: flex;
+  justify-content: center;
+  margin-top: 5rem;
+}
+
+.main-message {
+  font-size: 3rem;
+  text-transform: uppercase;
+}
+
+.clock {
+  position: absolute;
+  top: 50%; right: 50%;
+  transform: translate(50%,-50%); 
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
 }
