--- a/style.css
+++ b/style.css
@@ -12,6 +12,21 @@ body {
   background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(22,22,111,1) 0%, rgba(99,229,255,1) 100%); 
 }
 
+footer {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+/* some config */
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
 /* container */
 .container {
   display: flex;
