make the functionality of clock

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ a {
   text-transform: uppercase;
 }
 
-.clock {
+.clock-wrapper {
   position: absolute;
   top: 50%; right: 50%;
   transform: translate(50%,-50%); 
