finished dynamic message maybe i'll update it soon...

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ a {
   margin-top: 9rem;
 }
 
-.main-message {
+#main-message {
   font-size: 5rem;
   font-weight: 700;
   text-transform: uppercase;
